WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
207086
[JSC] Hold StructureID instead of Structure* in PolyProtoAccessChain and DFG::CommonData
https://bugs.webkit.org/show_bug.cgi?id=207086
Summary
[JSC] Hold StructureID instead of Structure* in PolyProtoAccessChain and DFG:...
Yusuke Suzuki
Reported
2020-01-31 21:42:19 PST
[JSC] Hold StructureID instead of Structure* in PolyProtoAccessChain and DFG::CommonData
Attachments
Patch
(28.47 KB, patch)
2020-01-31 21:46 PST
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
Patch
(28.47 KB, patch)
2020-01-31 21:51 PST
,
Yusuke Suzuki
mark.lam
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2020-01-31 21:46:04 PST
Created
attachment 389453
[details]
Patch
Yusuke Suzuki
Comment 2
2020-01-31 21:51:00 PST
Created
attachment 389454
[details]
Patch
Mark Lam
Comment 3
2020-01-31 22:06:20 PST
Comment on
attachment 389454
[details]
Patch r=me
Yusuke Suzuki
Comment 4
2020-01-31 22:18:24 PST
Committed
r255542
: <
https://trac.webkit.org/changeset/255542
>
Radar WebKit Bug Importer
Comment 5
2020-01-31 22:19:19 PST
<
rdar://problem/59084969
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug